Style chnage to prevent image distortion

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -308,6 +308,7 @@ button {
     align-items: center;
 
     img {
+      object-fit: scale-down;
       margin: auto;
       max-width: 100%;
       max-height: 100%;
